# opendesk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
commands/: ask.py
docs/: IMPLEMENTATION.md
examples/: morning_routine.py  ollama_bridge.py  screen_agent.py
opendesk/: __init__.py  _stdio_hygiene.py  ai_cli.py  audit.py  cli.py  config.py  confirm.py  errors.py  platform_utils.py  plugin_system.py  safety.py  server.py  session.py
opendesk/commands/: ask.py  audit.py  bridge.py  check.py  doctor.py  health.py  init.py  list_tools.py  serve.py  tool_call.py  uninstall.py
opendesk/llm/: __init__.py  base.py  claude_mcp.py  custom.py  direct.py  ollama.py  openai.py
opendesk/tools/: __init__.py  applications.py  audio.py  browser.py  clipboard.py  filesystem.py  input.py  notifications.py  screen.py  system.py  terminal.py
opendesk/tools/linux/: __init__.py  x11_utils.py
opendesk/tools/mac/: __init__.py  accessibility.py  applescript.py
opendesk/tools/windows/: __init__.py  uia.py  win32_utils.py
tests/: test_ask_bridge.py  test_mcp_integration.py  test_universal.py
tests/unit/: test_ask_bridge.py  test_package.py  test_path_safety.py  test_rate_limit.py  test_stdout_hygiene.py
